[package]
name = "riscv-tiny-hypervisor"
version = "0.1.0"
authors = ["Takashi Yoneuchi <takashi.yoneuchi@shift-js.info>"]
edition = "2018"

[dependencies]
num_enum = { version="0.5.1", default-features=false }
log = { version="0.4.11", default-features=false }
elf_rs = { version="0.1.3", default-features=false }

[build-dependencies]
cc = "1.0.66"